--- a/app/resources/templates/users/edit.html
+++ b/app/resources/templates/users/edit.html
@@ -46,6 +46,13 @@
                     <input class="w-full p-3 mb-5 border" type="password" name="new-password">
                 </div>
             </div>
+            <div>
+                <select name="role" required>
+                    <option disabled selected>Please Select Role</option>
+                    <option value="user">User</option>
+                    <option value="admin">Admin</option>
+                </select>
+            </div>
             
         </div> 
         <div class="w-full flex">
