--- a/app/resources/templates/posts/index-posts.html
+++ b/app/resources/templates/posts/index-posts.html
@@ -32,7 +32,7 @@
             </a>
         </div>
         <div class="my-auto">
-            {% if admin %}
+            {% if (admin) or (post.user.id == user.id) %}
                 {% include "components/edit-post-button.html" %}
             {% endif %}
         </div>
