--- a/app/resources/templates/homepage.html
+++ b/app/resources/templates/homepage.html
@@ -98,22 +98,22 @@
      <!--Lead Card-->
       
     <div class="flex h-full bg-white overflow-hidden shadow-lg rounded-lg">
-    <a href="/posts/{{ fetchLast4[0].id}}" class="flex flex-wrap no-underline hover:no-underline">
+    <a href="/posts/{{ lastPost.id}}" class="flex flex-wrap no-underline hover:no-underline">
     <div class="w-full md:w-2/3 rounded-b">	
-      <img src="{{ fetchLast4[0].image }}" class="h-full w-full shadow">
+      <img src="{{ lastPost.image }}" class="h-full w-full shadow">
     </div>
     <div class="w-full md:w-1/3 flex flex-col flex-grow flex-shrink">
       <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
         {% autoescape %}
-        <div class="w-full font-bold text-xl text-gray-900 px-6 mb-5 mt-5">{{ fetchLast4[0].title|raw }}</div>
-        <p class="text-gray-800 font-serif text-base px-6 mb-5">{{ fetchLast4[0].body|raw }}</p>
+        <div class="w-full font-bold text-xl text-gray-900 px-6 mb-5 mt-5">{{ lastPost.title|raw }}</div>
+        <p class="text-gray-800 font-serif text-base px-6 mb-5">{{ lastPost.body|raw }}</p>
         {% endautoescape %}
       </div>
 
       <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
         <div class="flex items-center justify-between">
-          <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="{{ usersName[0] }}" src="{{ usersImg[0] }}" alt="Avatar of Author">
-          <p class=" text-gray-600 text-xs md:text-sm px-6"> CREATED AT {{ fetchLast4[0].create_at|date('d.m.Y H:i') }}</p>
+          <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="{{ lastPost.user.name }}" src="{{ lastPost.user.image }}" alt="Avatar of Author">
+          <p class=" text-gray-600 text-xs md:text-sm px-6"> CREATED AT {{ lastPost.create_at|date('d.m.Y H:i') }}</p>
           <p class="text-gray-600 text-xs">1 MIN READ</p>
         </div>
       </div>
@@ -128,108 +128,53 @@
     <!--Posts Container-->
     <div class="flex flex-wrap justify-between pt-12 -mx-6">
 
-      <!--1/3 col -->
-      <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-        <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-          <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-            <img src="https://source.unsplash.com/collection/225/800x600" class="h-64 w-full rounded-t pb-6">
-            
-            <div class="w-full font-bold text-xl text-gray-900 px-6">Lorem ipsum dolor sit amet.</div>
-            <p class="text-gray-800 font-serif text-base px-6 mb-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula. 
-            </p>
-          </a>
-        </div>
-        <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
-          <div class="flex items-center justify-between">
-            <div class="w-1/4">
-              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="Author Name" src="http://i.pravatar.cc/300" alt="Avatar of Author" tabindex="0">
+      {% for post in last3Posts %}
+        <!--1/3 col -->
+        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
+          <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
+            <a href="/posts/{{ post.id }}" class="flex flex-wrap no-underline hover:no-underline">
+              <img src="{{ post.image }}" class="h-64 w-full rounded-t pb-6">
+              {% autoescape %}
+              <div class="w-full font-bold text-xl text-gray-900 px-6">{{ post.title|raw }}</div>
+              <p class="text-gray-800 font-serif text-base px-6 mb-5">{{ post.body|raw }}</p>
+              {% endautoescape %}
+            </a>
+          </div>
+          <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
+            <div class="flex items-center justify-between">
+              <div class="w-1/4">
+                <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="{{ post.user.name }}" src="{{ post.user.image }}" alt="Avatar of Author" tabindex="0">
+              </div>
+            <div class="w-2/4">
+              <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT {{ post.create_at|date('d.m.Y H:i') }}</p>
             </div>
-          <div class="w-2/4">
-            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT</p>
-          </div>
-          <div class="w-1/4">
-            <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
-          </div>
-      </div>
-        </div>
-      </div>
-    
-      
-      <!--1/3 col -->
-      <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-        <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-          <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-            <img src="https://source.unsplash.com/collection/3106804/800x600" class="h-64 w-full rounded-t pb-6">
-            
-            <div class="w-full font-bold text-xl text-gray-900 px-6">Lorem ipsum dolor sit amet.</div>
-            <p class="text-gray-800 font-serif text-base px-6 mb-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ip Aliquam at ipsum eu nunc commodo posuere et sit amet ligula. 
-            </p>
-          </a>
-          </div>
-        <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
-          <div class="flex items-center justify-between">
             <div class="w-1/4">
-              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="Author Name" src="http://i.pravatar.cc/300" alt="Avatar of Author" tabindex="0">
+              <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
             </div>
-          <div class="w-2/4">
-            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT</p>
-          </div>
-          <div class="w-1/4">
-            <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
-          </div>
-      </div>
         </div>
-      </div>
-
-      <!--1/3 col -->
-      <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-        <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-          <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-            <img src="https://source.unsplash.com/collection/539527/800x600" class="h-64 w-full rounded-t pb-6">
-            
-            <div class="w-full  font-bold text-xl text-gray-900 px-6">Lorem ipsum dolor sit amet.</div>
-            <p class="text-gray-800 font-serif text-base px-6 mb-5">
-              Lorem ipsum eu nunc commodo posuere et sit amet ligula. 
-            </p>
-          </a>
-        </div>
-        <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
-          <div class="flex items-center justify-between">
-            <div class="w-1/4">
-              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="Author Name" src="http://i.pravatar.cc/300" alt="Avatar of Author" tabindex="0">
-            </div>
-          <div class="w-2/4">
-            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT</p>
           </div>
-          <div class="w-1/4">
-            <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
-          </div>
-      </div>
         </div>
-      </div>
+      {% endfor %}
 
-
+      {% for post in pastMonthFirst2 %}
       <!--1/2 col -->
       <div class="w-full md:w-1/2 p-6 flex flex-col flex-grow flex-shrink">
         <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-          <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-            <img src="https://source.unsplash.com/collection/3657445/800x600" class="h-full w-full rounded-t pb-6">
-            
-            <div class="w-full font-bold text-xl text-gray-900 px-6">Lorem ipsum dolor sit amet.</div>
-            <p class="text-gray-800 font-serif text-base px-6 mb-5">
-              Lorem ipsum eu nunc commodo posuere et sit amet ligula. 
-            </p>
+          <a href="/posts/{{ post.id }}" class="flex flex-wrap no-underline hover:no-underline">
+            <img src="{{ post.image }}" class="h-full w-full rounded-t pb-6">
+            {% autoescape %}
+            <div class="w-full font-bold text-xl text-gray-900 px-6">{{ post.title|raw }}</div>
+            <p class="text-gray-800 font-serif text-base px-6 mb-5">{{ post.body|raw }}</p>
+            {% endautoescape %}
           </a>
         </div>
         <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
           <div class="flex items-center justify-between">
             <div class="w-1/4">
-              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="Author Name" src="http://i.pravatar.cc/300" alt="Avatar of Author" tabindex="0">
+              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="{{ post.user.name }}" src="{{ post.user.image}}" alt="Avatar of Author" tabindex="0">
             </div>
           <div class="w-2/4">
-            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT</p>
+            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT {{ post.create_at|date('d.m.Y H:i') }}</p>
           </div>
           <div class="w-1/4">
             <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
@@ -237,55 +182,26 @@
       </div>
         </div>
       </div>
-
-      <!--1/2 col -->
-      <div class="w-full md:w-1/2 p-6 flex flex-col flex-grow flex-shrink">
-        <div class="flex-1 flex-row bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-          <a href="#" class="flex flex-wrap no-underline hover:no-underline">	
-            <img src="https://source.unsplash.com/collection/764827/800x600" class="h-full w-full rounded-t pb-6">
-            
-            <div class="w-full font-bold text-xl text-gray-900 px-6">Lorem ipsum dolor sit amet.</div>
-            <p class="text-gray-800 font-serif text-base px-6 mb-5">
-              Lorem ipsum eu nunc commodo posuere et sit amet ligula. 
-            </p>
-          </a>
-        </div>
-        <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
-          <div class="flex items-center justify-between">
-            <div class="w-1/4">
-              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="Author Name" src="http://i.pravatar.cc/300" alt="Avatar of Author" tabindex="0">
-            </div>
-          <div class="w-2/4">
-            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT</p>
-          </div>
-          <div class="w-1/4">
-            <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
-          </div>
-      </div>
-        </div>
-      </div>
-
-
+      {% endfor %}
 
       <!--2/3 col -->
       <div class="w-full md:w-2/3 p-6 flex flex-col flex-grow flex-shrink">
         <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-          <a href="#" class="flex flex-wrap no-underline hover:no-underline">	
-            <img src="https://source.unsplash.com/collection/325867/800x600" class="h-full w-full rounded-t pb-6">
-            
-            <div class="w-full font-bold text-xl text-gray-900 px-6">Lorem ipsum dolor sit amet.</div>
-            <p class="text-gray-800 font-serif text-base px-6 mb-5">
-              Lorem ipsum eu nunc commodo posuere et sit amet ligula. 
-            </p>
+          <a href="/posts/{{ pastMonthLast2[0].id }}" class="flex flex-wrap no-underline hover:no-underline">	
+            <img src="{{ pastMonthLast2[0].image }}" class="h-full w-full rounded-t pb-6">
+            {% autoescape %}
+            <div class="w-full font-bold text-xl text-gray-900 px-6">{{ pastMonthLast2[0].title|raw }}</div>
+            <p class="text-gray-800 font-serif text-base px-6 mb-5">{{ pastMonthLast2[0].body|raw }}</p>
+            {% endautoescape %}
           </a>
         </div>
         <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
           <div class="flex items-center justify-between">
             <div class="w-1/4">
-              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="Author Name" src="http://i.pravatar.cc/300" alt="Avatar of Author" tabindex="0">
+              <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="{{ pastMonthLast2[0].user.name }}" src="pastMonthLast2[0].user.id" alt="Avatar of Author" tabindex="0">
             </div>
           <div class="w-2/4">
-            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT</p>
+            <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT {{ pastMonthLast2[0].create_at|date('d.m.Y H:i') }}</p>
           </div>
           <div class="w-1/4">
             <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
@@ -297,22 +213,21 @@
       <!--1/3 col -->
       <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
         <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-          <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-            <img src="https://source.unsplash.com/collection/1118905/800x600" class="h-full w-full rounded-t pb-6">
-           
-            <div class="w-full font-bold text-xl text-gray-900 px-6">Lorem ipsum dolor sit amet.</div>
-            <p class="text-gray-800 font-serif text-base px-6 mb-5">
-              Lorem ipsum eu nunc commodo posuere et sit amet ligula. 
-            </p>
+          <a href="/posts/{{ pastMonthLast2[1].id }}" class="flex flex-wrap no-underline hover:no-underline">
+            <img src="{{ pastMonthLast2[1].image }}" class="h-full w-full rounded-t pb-6">
+            {% autoescape %}
+            <div class="w-full font-bold text-xl text-gray-900 px-6">{{ pastMonthLast2[1].title|raw }}</div>
+            <p class="text-gray-800 font-serif text-base px-6 mb-5">{{ pastMonthLast2[1].body|raw }}</p>
+            {% endautoescape %}
           </a>
         </div>
         <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
             <div class="flex items-center justify-between">
                 <div class="w-1/4">
-                  <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="Author Name" src="http://i.pravatar.cc/300" alt="Avatar of Author" tabindex="0">
+                  <img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content="{{ pastMonthLast2[1].user.name }}" src="{{ pastMonthLast2[1].user.id }}" alt="Avatar of Author" tabindex="0">
                 </div>
               <div class="w-2/4">
-                <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT</p>
+                <p class="w-full text-gray-600 text-xs md:text-sm px-6 text-center">CREATED AT {{ pastMonthLast2[1].create_at|date('d.m.Y H:i') }}</p>
               </div>
               <div class="w-1/4">
                 <p class="text-gray-600 text-xs md:w-full text-right">1 MIN READ</p>
