feat: save storage images with id

--- a/app/resources/templates/posts/post-edit.html
+++ b/app/resources/templates/posts/post-edit.html
@@ -34,7 +34,7 @@
             <input type="file" name="image">
         </div> 
         <div class="w-full flex">
-            <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Update Post</button>
+            <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full" name="submit">Update Post</button>
 		</div>
 	</form>
 	<div class="flex w-full">
