--- a/app/resources/templates/users/edit.html
+++ b/app/resources/templates/users/edit.html
@@ -60,7 +60,7 @@
             </div>
         </div> 
         <div class="w-full flex">
-            <button type="submit" class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Update User</button>
+            <button type="submit" class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full" name="submit">Update User</button>
 		</div>
 	</form>
 	<div class="flex w-full">
