--- a/app/resources/templates/posts/post-create.html
+++ b/app/resources/templates/posts/post-create.html
@@ -29,7 +29,7 @@
             <input type="file" name="image">
         </div> 
         <div class="w-full flex">
-            <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full">Save Post</button>
+            <button class="text-white bg-green-600 rounded p-3 m-3 w-1/4 hover:bg-green-500 w-full" name="submit">Save Post</button>
         </div>
     </form>
 </div>
