hamburger button path

--- a/app/resources/templates/homepage.html
+++ b/app/resources/templates/homepage.html
@@ -22,7 +22,7 @@
 <div class="md:flex w-full pl-4 text-sm fixed transform" id="navigation" style="opacity: 0.8; padding: 22px; top:0; background-color: rgb(255,255,255);">
   <div class="md:hidden md:flex text-right">
     <button class="ml-auto focus:outline-none" onclick="toggleNav()">
-      <img class="w-10 h-10" src="storage\pic\9851132801553239378.svg" alt="ham">
+      <img class="w-10 h-10" src="/storage/pic/9851132801553239378.svg" alt="ham">
     </button>
   </div>
   
