--- a/app/resources/templates/posts/index-posts.html
+++ b/app/resources/templates/posts/index-posts.html
@@ -26,7 +26,11 @@
                     {% endif %}
                 </div>
                 <div class="m-auto h-16 w-16 rounded-full overflow-hidden mb-3">
-                    <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+                    {% if post.user.image %}
+                     <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="/{{ post.user.image }}" alt="{{ post.user.name }}" tabindex="0">
+                    {% else %}
+                     <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+                    {% endif %}
                  </div>
                  <div class="ml-3 mb-3 text-smal text-gray-500 italic m-auto">
                      Author: <a class="hover:underline hover:text-gray-700" href="/users/{{ post.user.id }}">{{ post.user.name }}</a> 
