--- a/app/resources/templates/posts/post-show.html
+++ b/app/resources/templates/posts/post-show.html
@@ -23,7 +23,11 @@
 			 </div>
 			 <div class="text-sm text-left flex">
 				 <div class="h-16 w-16 rounded-full overflow-hidden mr-4">
-					<img class="w-full h-full object-cover avatar" data-tippy-content="Author Name" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+				 	{% if post.user.image %}
+                     <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="/{{ post.user.image }}" alt="{{ post.user.name }}" tabindex="0">
+                    {% else %}
+                     <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+                    {% endif %}
 				 </div>
 
 				 <div class="italic hover:underline mt-auto">
@@ -57,7 +61,11 @@
 <div class="border rounded-lg p-5 mb-8">
 	<div class="flex mb-5">
 		<div class="h-16 w-16 rounded-full overflow-hidden mr-4">
-			<img class="w-full h-full object-cover" data-tippy-content="Author Name" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+			{% if post.user.image %}
+             <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="/{{ post.user.image }}" alt="{{ post.user.name }}" tabindex="0">
+            {% else %}
+             <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+            {% endif %}
 		 </div>
 		<div class="mr-5 my-auto">
 			<a href="/users/{{ comment.user.id }}" class="hover:underline" >{{ comment.user.name }}</a>
