--- a/app/resources/templates/users/edit.html
+++ b/app/resources/templates/users/edit.html
@@ -48,17 +48,25 @@
             </div>
 
             {% if admin %}
-            <div>
-                <select name="role" required>
+            <div class="w-full text-center mb-10">
+                <select name="role" required class="text-2xl">
                     <option disabled selected>Please Select Role</option>
                     <option value="user">User</option>
                     <option value="admin">Admin</option>
                 </select>
             </div>
-            <div>
-                <img src="/{{ user.image }}" alt="Avatar of Author">
-                <label>Image</label>
-                <input type="file" name="image">
+            <div class="flex justify-between mb-10 p-3">
+                <div class="w-1/3 md:h-48 md:w-56 h-24 w-24 rounded-full overflow-hidden mb-10 mr-10 mt-auto mb-auto">
+                    <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
+                </div>
+                <div class="w-2/3 ml-auto w-full text-left mb-10 text-2xl mt-auto mb-auto p-3 overflow-hidden">
+                    <div class="mb-10">
+                        <label>Upload Image</label>
+                    </div>
+                    <div class="overflow-hidden text-sm">
+                        <input type="file" name="image">
+                    </div>
+                </div>
             </div>
             {% endif %}
         </div> 
